--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <title> Static HTML </title>
     </head>
     <body>
-      <p>This is the first paragraph in a <strong>simple</strong> Static <strong>HTML</strong>.</p>
+      <p>This is the first paragraph in a <strong>simple</strong> Static <strong>HTML</script>.</p>
     </body>
   </html> 
 
